------------------------------------------------------------------------
r2097 | gaser | 2022-08-19 10:54:44

Changed paths:
 M CHANGES.txt
 M cat_plot_boxplot.m
 M cat_surf_results.m


Changed: Updated line colors for connected time points in cat_plot_boxplot.m
         and added transparency if available.
Changed: Added connecting time points for long. designs in cat_surf_results.m.
------------------------------------------------------------------------
r2096 | gaser | 2022-08-19 01:09:58

Changed paths:
 M CHANGES.txt
 M cat_plot_boxplot.m
 M cat_stat_check_SPM.m
 M cat_stat_confplot_spm.m
 M cat_stat_homogeneity.m
 M cat_surf_results.m


Changed: Extended cat_plot_boxplot to use a matrix xX.I from SPM.mat to draw 
         connected lines between time points of each subject and group.
Changed: Updated check for subject and group effects in matrix xX.I in
         cat_stat_check_SPM.m, cat_stat_confplot_spm.m and cat_surf_results.m.
------------------------------------------------------------------------
r2095 | gaser | 2022-08-18 16:28:35

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m
 M cat_vol_slice_overlay.m


Changed: Try to set the interpreter to 'none' in cat_surf_results.m
------------------------------------------------------------------------
r2094 | gaser | 2022-08-18 15:05:37

Changed paths:
 M CHANGES.txt
 M cat_stat_homogeneity.m


Fixed:   Removed implicite mask from cat_stat_homogeneity, because it wasn't 
         correctly working.
Changed: Use new figure by default in cat_stat_homogeneity.m, but allow to
         disable this.
------------------------------------------------------------------------
r2093 | gaser | 2022-08-18 11:53:37

Changed paths:
 M CHANGES.txt
 M cat_plot_boxplot.m
 M cat_plot_scatter.m


Chamged: Many changed to cat_plot_scatter.m:
           - added new options to set color and fontsize and to save plot as image
           - changed default setting for 'filled' and also changed syntax to be 